Removed redundant section in home, fixed issue with pic on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -139,6 +139,8 @@ pre {
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
 }
 
 .sponsor-pic {
